@@ -4,7 +4,6 @@ import { KeyBuilder } from './KeyBuilder';
 export interface MySegmentsKeyBuilder {
   buildSegmentNameKey(segmentName: string): string;
   extractSegmentName(builtSegmentKeyName: string): string | undefined;
-  extractOldSegmentKey(builtSegmentKeyName: string): string | undefined;
   buildTillKey(): string;
 }
 
@@ -33,14 +32,6 @@ export class KeyBuilderCS extends KeyBuilder implements MySegmentsKeyBuilder {
       return builtSegmentKeyName.substr(prefix.length);
   }
 
-  // @BREAKING: The key used to start with the matching key instead of the prefix, this was changed on version 10.17.3
-  extractOldSegmentKey(builtSegmentKeyName: string) {
-    const prefix = `${this.matchingKey}.${this.prefix}.segment.`;
-
-    if (startsWith(builtSegmentKeyName, prefix))
-      return builtSegmentKeyName.substr(prefix.length);
-  }
-
   buildLastUpdatedKey() {
     return `${this.prefix}.splits.lastUpdated`;
   }
@@ -64,10 +55,6 @@ export function myLargeSegmentsKeyBuilder(prefix: string, matchingKey: string): 
       const p = `${prefix}.${matchingKey}.largeSegment.`;
 
       if (startsWith(builtSegmentKeyName, p)) return builtSegmentKeyName.substr(p.length);
-    },
-
-    extractOldSegmentKey() {
-      return undefined;
     },
 
     buildTillKey() {
